# claude-profile

./: .gitignore  Cargo.toml  README.md  dist.md
.github/workflows/: release.yml
docs/: README.md  commands.md  how-it-works.md  profiles.md  statusline.md
docs/superpowers/plans/: 2026-07-11-plugin-finder.md  2026-07-14-install-spinner.md  2026-07-15-vendored-plugin-isolation.md
docs/superpowers/specs/: 2026-07-11-plugin-finder-design.md  2026-07-14-install-spinner-design.md  2026-07-15-vendored-plugin-isolation-design.md
examples/: python-developer.json  rust-developer.json
profiles/: angular-developer.json  design.json  dev-base.json  dotnet-developer.json  frontend.json  go-developer.json  java-developer.json  python-developer.json  rails-developer.json  react-developer.json  ruby-developer.json  rust-desktop-developer.json  rust-developer.json  typescript-developer.json  vue-developer.json
src/: claude.rs  combine.rs  enablement.rs  extends.rs  fs_paths.rs  git.rs  launch.rs  lock.rs  main.rs  pack.rs  profile.rs  provision.rs  refmap.rs  resolve.rs  spinner.rs  vendor.rs  vendor_fs.rs
src/commands/: check_update.rs  completions.rs  disable.rs  find.rs  gc.rs  list.rs  mod.rs  new.rs  remove.rs  self_uninstall.rs  show.rs  status.rs  statusline.rs  test.rs  update.rs
src/index/: default_seeds.rs  fetch.rs  mod.rs  model.rs  search.rs  seeds.rs
