[package]
name = "claude-profile"
version = "0.3.3"
edition = "2021"
description = "Launch claude with only the plugins, skills, and MCP servers a profile defines"
license = "MIT"
repository = "https://github.com/fuzzyalej/claude-profile"
homepage = "https://github.com/fuzzyalej/claude-profile"

[[bin]]
name = "claude-profile"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tempfile = "3"
indicatif = "0.17"
console = "0.15"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
