[package]
# crates.io name (claude-profile/claude_profile is already taken by an unrelated
# crate). The installed binary is still named `claude-profile` — see [[bin]] below.
name = "claude-profiles"
version = "0.4.0"
edition = "2021"
description = "Launch claude with only the plugins, skills, and MCP servers a profile defines"
license = "MIT"
repository = "https://github.com/fuzzyalej/claude-profile"
homepage = "https://github.com/fuzzyalej/claude-profile"
readme = "README.md"
keywords = ["claude", "cli", "plugins", "profile", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-profile"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tempfile = "3"
indicatif = "0.17"
console = "0.15"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
